--- a/ntp/config.d/etc/ntp.conf
+++ b/ntp/config.d/etc/ntp.conf
@@ -1,12 +1,12 @@
 # Minimize error on startup by storing the frequency offset.
-driftfile /var/lib/ntp/drift
+driftfile ${DRIFT_FILE}
 
 # Allow NIST leap second values to be loaded from file.
-leapfile /var/lib/ntp/leap
+leapfile ${LEAP_SECONDS_FILE}
 
 # Enable recording of statistics.
 statistics clockstats loopstats peerstats
-statsdir /var/log/ntpstats/
+statsdir ${STATS_DIR}
 
 # Enable daily statistics log rotations for each stat type.
 filegen clockstats file clockstats type day link enable
