Python setup script and mustache templates

--- a/ntp/config.d/etc/ntp.conf
+++ b/ntp/config.d/etc/ntp.conf
@@ -1,12 +1,14 @@
+# /etc/ntp.conf
+
 # Minimize error on startup by storing the frequency offset.
-driftfile ${DRIFT_FILE}
+driftfile {{DRIFT_FILE}}
 
 # Allow NIST leap second values to be loaded from file.
-leapfile ${LEAP_SECONDS_FILE}
+leapfile {{LEAP_SECONDS_FILE}}
 
 # Enable recording of statistics.
 statistics clockstats loopstats peerstats
-statsdir ${STATS_DIR}
+statsdir {{STATS_DIR}}
 
 # Enable daily statistics log rotations for each stat type.
 filegen clockstats file clockstats type day link enable
